--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.83",
         "@types/react": "^18.2.58",
+        "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18.2.19",
         "prettier": "^3.2.5",
         "react": "^18.2.0",
+        "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
         "react-scripts": "5.0.1",
