--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
         "@types/react": "^18.2.58",
         "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18.2.19",
+        "date-fns": "^3.6.0",
+        "leaflet": "^1.9.4",
         "prettier": "^3.2.5",
         "react": "^18.2.0",
         "react-csv": "^2.2.2",
+        "react-device-detect": "^2.2.3",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
+        "react-leaflet": "^4.2.1",
+        "react-loader-spinner": "^6.1.6",
         "react-scripts": "5.0.1",
+        "react-xml-parser": "^1.1.8",
         "read-excel-file": "^5.7.1",
         "styled-components": "^6.1.8",
         "typescript": "^4.9.5",
@@ -51,6 +57,7 @@
         ]
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.8",
         "gh-pages": "^6.1.1"
     }
 }
