[Feature] - New nimegue file feature

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/convert-excel-to-json": "^1.7.4",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.83",
         "@types/react": "^18.2.58",
         "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18.2.19",
+        "convert-excel-to-json": "^1.7.0",
         "date-fns": "^3.6.0",
         "leaflet": "^1.9.4",
         "prettier": "^3.2.5",
