--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "read-excel-file": "^5.7.1",
         "styled-components": "^6.1.8",
         "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "xlsx": "^0.18.5"
     },
     "scripts": {
         "start": "react-scripts start",
